--- a/travello/src/styles/Header.module.scss
+++ b/travello/src/styles/Header.module.scss
@@ -2,11 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 40px;
   h2 {
     font-size: 30px;
     font-family: Volkhov;
     font-weight: 700;
     color: #000000;
+    cursor: pointer;
   }
   nav {
     display: flex;
@@ -18,6 +20,7 @@
       font-weight: 400;
       font-size: 22px;
       color: #212832;
+      cursor: pointer;
     }
     .sign {
       width: 135px;
@@ -27,11 +30,13 @@
       font-size: 22px;
       color: #212832;
       background-color: #fff;
+      cursor: pointer;
     }
     h6 {
       font-family: Google Sans;
       font-weight: 500;
       font-size: 22px;
+      cursor: pointer;
       img {
         padding-left: 9px;
       }
