--- a/travello/src/styles/App.module.scss
+++ b/travello/src/styles/App.module.scss
@@ -67,6 +67,8 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+      transition: all 0.3s ease;
+
       .img {
         width: 150px;
         height: 150px;
@@ -74,6 +76,15 @@
         background-repeat: no-repeat;
         background-size: cover;
         margin-top: 40px;
+        transition: transform 0.3s ease;
+      }
+
+      &:hover {
+        color: #212832;
+        transform: translateY(-2px);
+        .img {
+          transform: scale(1.05);
+        }
       }
     }
   }
@@ -299,6 +310,132 @@
           color: #5e6282;
         }
       }
+    }
+  }
+}
+.companies {
+  display: flex;
+  gap: 70px;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+  gap: 70px;
+  align-items: center;
+  justify-content: space-between;
+
+  .axon,
+  .jetstar,
+  .expedia,
+  .qantas,
+  .alitalia {
+    background-size: contain;
+    background-repeat: no-repeat;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+
+    &:hover {
+      transform: scale(1.05);
+      opacity: 0.8;
+    }
+  }
+  .axon {
+    width: 172px;
+    height: 172px;
+
+    background-image: url(../assents/axon.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .jetstar {
+    width: 229px;
+    height: 146px;
+    background-image: url(../assents/jetstar.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .expedia {
+    width: 215px;
+    height: 215px;
+    background-image: url(../assents/expedia.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .qantas {
+    width: 215px;
+    height: 42px;
+    background-image: url(../assents/qantas.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .alitalia {
+    width: 125px;
+    height: 27px;
+    background-image: url(../assents/litalia.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+}
+.subscribe {
+  padding: 105px 0;
+  background-color: #f5f3fe;
+  border-radius: 170px 26px 26px 26px;
+  margin: 164px 0 220px;
+  .subscribeWrapper {
+    max-width: 1142px;
+    margin: auto;
+    h2 {
+      font-family: Poppins;
+      font-weight: 600;
+      font-size: 43.89px;
+      line-height: 71.83px;
+      text-align: center;
+      color: #5e6282;
+      margin-bottom: 98px;
+    }
+    input {
+      padding: 33px 372px 33px 87px;
+      border-radius: 13px;
+      border: none;
+      font-family: Montserrat;
+      font-weight: 400;
+      font-size: 18.62px;
+      color: #39425d;
+      margin-right: 32px;
+      cursor: pointer;
+      background-image: url(../assents/message.svg);
+      background-repeat: no-repeat;
+      background-position: 30px center;
+      background-size: 24px 24px;
+      &::placeholder {
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size: 18.62px;
+        color: #39425d;
+      }
+      &:hover {
+        background-color: #ffffff;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        transform: translateY(-1px);
+      }
+    }
+    button {
+      width: 240px;
+      height: 90px;
+      border-radius: 13px;
+      border: none;
+      background: linear-gradient(180deg, #ff946d 0%, #ff7d68 100%);
+      font-family: Open Sans;
+      font-weight: 600;
+      font-style: Semibold;
+      font-size: 22.61px;
+      text-align: center;
+      color: #ffffff;
+    }
+    button:hover {
+      background: linear-gradient(180deg, #ff7d68 0%, #ff946d 100%);
+      box-shadow: 0 8px 20px rgba(255, 125, 104, 0.4);
+      transform: scale(1.03);
+      transition: all 0.3s ease;
+      cursor: pointer;
     }
   }
 }
